Change History
--------------

This file contains a list of all changes starting after the release of
sox-11gamma.

sox-14.0.2	2008-xx-xx
----------

  File formats:

  Effects:

  Other new features:

  o Command line support for multiple file comments.  (robs)

  Bug fixes:

  o Fix [1864216] comments mangled when writing ogg-vorbis.  (robs)

  Internal improvements:


sox-14.0.1	2008-01-29
----------

  File formats:

  o Added support for non-standard, non-WAVE_FORMAT_EXTENSIBLE
    (esp. 24-bit) PCM wav (see wavpcm in soxformat.7 for details).  (robs)

  Effects:

  o Reimplemented reverb to be similar to freeverb.  (robs)

  Bug fixes:

  o Fix Sndtool read error causing noise at start.  (Reynir Stefánsson)
  o Fix mixer with >4 numbers, and mixer -3 behaving as mixer -4.  (robs)
  o Fix [1748909] sox does not report remaining playtime of mp3s.  (robs)
  o Fix failure to read AIFF files with empty MARK chunk.  (robs)
  o Fix spurious 'Premature EOF' message in some circumstances.  (robs)
  o Switched to 16-bit for libao driver since not all its plugins
    support it (such as oss, nas, and pulse audio) (Morita Sho)
  o Stop crash when "rec" is run with no arguments (Morita Sho).
  o Fix -V (without argument) on non-gnu systems.  (robs)
  o Fix reported (with -V) output audio length in some cases.  (robs)
  o Fix actual FLAC output file audio length in some cases.  (robs)
  o Fix poor 24-bit FLAC compression & support newer versions of
    libFLAC (1.2.x).  (robs)
  o Fix loss of 1 decoded FLAC block when using "trim 0 ...".  (robs)
  o Fix trim when first effect with IMA-ADPCM input wav file.  (robs)

  Internal improvements:

  o Let "make distcheck" run some automated test scripts.
  o Distribute missing cmake files.
  o Fix ogg vorbis compile error on some platforms.
  o Remove unused libltdl that could cause header mismatch with
    installed libltdl.
  o Fix AMR detection with --disable-shared.  (robs)